@@ -40,6 +40,8 @@ Changes in version 0.2.0.8-alpha - 2007-??-??
       gets rid of annoying "400 OK" log messages, which may have been masking
       some deeper issue.  Bugfix on 0.2.0.7-alpha.
     - When we get a valid consensus, recompute the voting schedule.
+    - Base the valid-after time of a vote on the consensus voting schedule,
+      not on our preferred schedule.
 
   o Minor bugfixes (performance):
     - Use a slightly simpler string hashing algorithm (copying Python's
